# Universal-file-RAG

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: generate_audio_fixture.py  generate_docx_xlsx_fixtures.py  generate_ocr_fixtures.py  generate_pdf_fixtures.py
src/ufrag/: cli.py  config.py  gemini_client.py  models.py  pipeline.py
src/ufrag/chunking/: base.py
src/ufrag/chunking/strategies/: audio.py  docx.py  image.py  markdown.py  pdf.py  spreadsheet.py
src/ufrag/generation/: answerer.py
src/ufrag/indexing/: metadata_store.py  outline_store.py  vector_store.py
src/ufrag/ingestion/: detector.py
src/ufrag/ingestion/extractors/: audio.py  docx.py  image.py  markdown.py  pdf.py  spreadsheet.py
src/ufrag/retrieval/: hierarchical_search.py  router.py  vector_search.py
src/ufrag/structure/: outline_builder.py  structure_scorer.py
tests/fixtures/: sample_budget.xlsx  sample_manual.docx  sample_manual.md  sample_note.docx  sample_note.md
