[project]
name = "ufrag"
version = "0.1.0"
description = "Universal File RAG — hybrid structure-aware + vector retrieval over heterogeneous files"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=0.3.0",
    "qdrant-client>=1.9.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "tree-sitter>=0.22.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
]

[project.scripts]
ufrag = "ufrag.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
